Cleanup obsolete JVM configuration