@@ -12,5 +12,3 @@
 -XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
-# Allow loading dynamic agent used by JOL
--XX:+EnableDynamicAgentLoading
